--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-leap-day
 title: Welcome to ΘΠ page
 description: Just an ideas-board
-is_project_page: false
+github:
+  is_project_page: false
