--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ theme: jekyll-theme-leap-day
 title: Welcome to ΘΠ page
 description: Just an ideas-board
 show_downloads: false
+github:
+  is_project_page: false
