--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-leap-day
+theme: jekyll-theme-minimal
 title: Welcome to ΘΠ page
 description: Just an ideas-board
 show_downloads: false
